# rim-rust

./: .gitignore  Cargo.toml  torchguard.drawio  update_schemas.bat
diagrams/: datamodel
src/: lib.rs  main.rs  mod.rs
src/auth/: mod.rs  routes.rs
src/db/: mod.rs
src/entity/: characters.rs  mod.rs  prelude.rs  users.rs
src/user/: mod.rs  model.rs  routes.rs
