[package]
name = "torchguard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-session = {version = "0.6.2", features = ["cookie-session"]}
jsonwebtoken = "8.0.1"
oauth2 = "4.1"

mysql = "22.1"
serde = "1"
diesel = {version = "1.4.8", features = ["postgres", "r2d2"]}

env_logger = "0.9"
dotenv = "0.15"