[package]
name = "torchguard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web framework
actix-web = "4"
actix-session = {version = "0.6.2", features = ["cookie-session"]}
actix-cors = "0.6.1"

# database management
sea-orm = { version = "0.7.1", features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros" ] }
serde = {version = "1.0", features = ["derive"]}

# auth
ring = "0.16.20"

# logging
env_logger = "0.9"
dotenv = "0.15"
